# odooconf

./: README.md  pyproject.toml
odooconf/src/odooconf/: main.py
