[project]
name = "odooconf"
version = "0.1.4"
description = ""
authors = [
    {name = "Alitux",email = "alitux@disroot.org"}
]
license = {text = "GNU/GPLV2"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]
[tool.poetry.scripts]
odooconf = "odooconf.src.odooconf.main:app"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
